[package]
name = "raycaster"
version = "0.1.0"
authors = ["Johan-Mi <johanmi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.113"
image = "0.23"
gfx = "0.18"
gfx_device_gl = "0.16"
